Updated the Makefile to specifically making Vietnamese only, correct the wrong zip files committed earlier. All zip files are now will contain Vietnamese version of files.

--- a/blender_docs/Makefile
+++ b/blender_docs/Makefile
@@ -17,8 +17,9 @@ endif
 # End System Vars
 # ---------------
 
-
-SPHINXOPTS    = -j "$(NPROCS)"
+VI_LANGUAGE_OPT= -D language='vi'
+#SPHINXOPTS    = -j "$(NPROCS) $(VI_LANGUAGE_OPT)"
+SPHINXOPTS    = -D language='vi'
 PAPER         =
 SPHINXBUILD   = sphinx-build
 BUILDDIR      = build
