--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
+blender_docs/build/blender_vietnamese_html.zip filter=lfs diff=lfs merge=lfs -text
+blender_docs/build/blender_vietnamese_single.zip filter=lfs diff=lfs merge=lfs -text
 blender_docs/build/blender*.zip filter=lfs diff=lfs merge=lfs -text
