Latest changes for today

--- a/Text Substitutions.plist
+++ b/Text Substitutions.plist
@@ -4918,6 +4918,12 @@
 	</dict>
 	<dict>
 		<key>phrase</key>
+		<string>khả thi</string>
+		<key>shortcut</key>
+		<string>khath</string>
+	</dict>
+	<dict>
+		<key>phrase</key>
 		<string>khai báo</string>
 		<key>shortcut</key>
 		<string>khbao</string>
@@ -5215,6 +5221,12 @@
 		<string>khởi thể</string>
 		<key>shortcut</key>
 		<string>khthe</string>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>khả thi</string>
+		<key>shortcut</key>
+		<string>khthi</string>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -5524,6 +5536,12 @@
 	</dict>
 	<dict>
 		<key>phrase</key>
+		<string>kết xuất</string>
+		<key>shortcut</key>
+		<string>kxuat</string>
+	</dict>
+	<dict>
+		<key>phrase</key>
 		<string>ký hiệu</string>
 		<key>shortcut</key>
 		<string>kyh</string>
@@ -5665,6 +5683,12 @@
 		<string>lần đầu tiên</string>
 		<key>shortcut</key>
 		<string>ldtien</string>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>lưu giữ</string>
+		<key>shortcut</key>
+		<string>lgiu</string>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -6325,6 +6349,12 @@
 		<string>mạnh khỏe</string>
 		<key>shortcut</key>
 		<string>mkhoe</string>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>máy kết xuất</string>
+		<key>shortcut</key>
+		<string>mkxuat</string>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -9772,6 +9802,12 @@
 	</dict>
 	<dict>
 		<key>phrase</key>
+		<string>thực sự</string>
+		<key>shortcut</key>
+		<string>thsu</string>
+	</dict>
+	<dict>
+		<key>phrase</key>
 		<string>thao tác</string>
 		<key>shortcut</key>
 		<string>thtac</string>
@@ -9907,6 +9943,18 @@
 		<string>thuận chiều</string>
 		<key>shortcut</key>
 		<string>thuanch</string>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>thực tế</string>
+		<key>shortcut</key>
+		<string>thucte</string>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>thực sự</string>
+		<key>shortcut</key>
+		<string>thucz</string>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -11872,6 +11920,12 @@
 	</dict>
 	<dict>
 		<key>phrase</key>
+		<string>xác thực</string>
+		<key>shortcut</key>
+		<string>xacth</string>
+	</dict>
+	<dict>
+		<key>phrase</key>
 		<string>xấu hơn</string>
 		<key>shortcut</key>
 		<string>xauh</string>
@@ -12103,6 +12157,12 @@
 		<string>xuất</string>
 		<key>shortcut</key>
 		<string>xt</string>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>xác thực</string>
+		<key>shortcut</key>
+		<string>xthuc</string>
 	</dict>
 	<dict>
 		<key>phrase</key>
