--- a/.aliasrc
+++ b/.aliasrc
@@ -3,7 +3,7 @@ alias mv='mv -iv'
 alias cp='cp -iv'
 alias rm='rm -iv'
 alias reloadbashrc='. ~/.bash_profile'
-alias gettext='cd $BLENDER_MAN_EN; make gettext'
+alias mygettext='cd $BLENDER_MAN_EN; make gettext'
 alias viewpovi='PO_PATH=~/blender_manual/gui/2.80/po/vi.po; vi $PO_PATH'
 alias updatepo='export my_pwd=$PWD; cd $BLENDER_MAN_EN/locale/vi; svn cleanup; svn update; cd $BLENDER_MAN_EN; rm -fr build/locale; make gettext; sphinx-intl --config=manual/conf.py update --pot-dir=build/locale --language="vi"; python3 tools_rst/rst_check_locale.py; cd $my_pwd;'
 alias convertpo='github_vipo=$BLENDER_GITHUB/gui/2.80; src_vipo=$github_vipo/po/vi.po; target_mo=$github_vipo/locale/vi/LC_MESSAGES/blender.mo; blender_mo=/Applications/Blender.app/Contents/Resources/2.83/datafiles/locale/vi/LC_MESSAGES/blender.mo; msgfmt -o $target_mo $src_vipo; cp -a $target_mo $blender_mo'
